Fixed Spacing

--- a/styles/ColourChart.module.sass
+++ b/styles/ColourChart.module.sass
@@ -106,7 +106,7 @@
     text-transform: capitalize
 
 .epoxyColours
-    margin-top: 2.5em
+    margin: 2.5em 0
 
 @media screen and (max-width: 1572px)
     .mainContent
